# orbitals

./: Cargo.toml  LICENCE  README.md  TODO  index.html  index.js
pkg/: README.md  orbitals.d.ts  orbitals.js  orbitals_bg.wasm  orbitals_bg.wasm.d.ts
src/: build_shader.rs  lib.rs  main.rs  shader.wgsl  shader_template.wgsl  web.rs
