[package]
name = "orbitals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.5"
wgpu-types = "0.14"
wgpu = "0.14"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
bytemuck = { version = "1.12.1", features = ["derive"] }
nalgebra = "0.31.2"
rand = "0.8.5"
minipre = "0.2.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
