[package]
name = "orbitals"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

# winit = "0.27.5"
# Specific up-to-date version of winit is required for touch events. This can
# be changed once 0.27.6 is released.
# winit = { git="https://github.com/ryo33/winit.git", branch="web-touch-event" }
winit = { git="https://github.com/rust-windowing/winit.git", rev="2f52c23fa9d87b609bd278b1afbea05d6bdd4aac" }
wgpu-types = "0.14"
wgpu = "0.14"
log = "0.4"
bytemuck = { version = "1.12.1", features = ["derive"] }
nalgebra = "0.31.2"
minipre = "0.2.0"

[target.'cfg(unix)'.dependencies]
pollster = "0.2"
env_logger = "0.9"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
console_log = "0.2"
wgpu = { version = "0.14", features = ["webgl"]}

[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
version = "0.3.60"
features = [
  'Document',
  'Element',
  'Node',
  'Window',
]

[profile.release]
lto = true
codegen-units = 1
# strip = true
opt-level = "z"
